# git-it

./: CHANGELOG.md  README.md  cliff.toml  pyproject.toml  todo.md
src/git_it/: main.py
src/gitit/: main.py
src/gitmoji/: main.py
