[project]
name = "git_it"
version = "0.1.0"
description = "An interactive, emoji-guided workflow for GitHub submissions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "inquirer>=3.4.1",
]

[tool.uv]
package = true

[project.scripts]
gitit = "git_it.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"